# DSARF

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_DETAILED.md  RELEASE_CHECKLIST.md  REPO_SUMMARY.md  SUMMARY.md
draw/: parse_deadlock_log.py
include/: dfsssp_anytopo.h  duato_vc_layering.h  route_sim_anytopo.h  slimfly_routing.h  updown_turn.h  utils.h
patches/: 0001-fix-parser-robust-topology-parsing-and-remove-debug-.patch  CHANGELOG.txt  COMMIT_MSG.txt  fix-parser-and-clean-diagnostics.patch
results/slimfly/slimfly_N1058_D35_slimfly_min/: pernode.csv  sim_log.txt  summary.txt
results/slimfly/slimfly_N1682_D43_slimfly_min/: pernode.csv  sim_log.txt  summary.txt
results/slimfly/slimfly_N242_D17_slimfly_min/: pernode.csv  sim_log.txt  summary.txt
results/slimfly/slimfly_N338_D19_slimfly_min/: pernode.csv  sim_log.txt  (+1 more)
results/slimfly_hotspot_latency/: injection_knee_summary.csv
results/slimfly_suite/: summary_table.csv
scripts/: analyze_deadlock_dump.py  analyze_hotspot_injection_knee.py  analyze_pathlog.py  check_ramanujan.py  convert_to_topo.py  experiment_config.json  organize_results.py  pathset_length_stats.py  plot_path_log.py  prepare_release_archive.sh  run_experiments.py  run_slimfly_hotspot_latency.sh  run_slimfly_suite.sh  run_slimfly_suite_all2all.sh  summarize_slimfly_results.py  summarize_slimfly_three_sets.py  validate_topo.py
src/: dfs.c  floyd_warshall.c  globals.c  path_with_turn_forbidden.c  route_sim_anytopo.c  slimfly_routing.c  topology.c  tree_trun.c  updown_turn.c  utils.c
tools/: gui_run_topology.py  web_gui.py
(+229 files in other folders)
